# ClaferGrammar

./: .gitignore  Absclafer.hs  ClaferT.hs  ErrM.hs  LayoutResolver.hs  Lexclafer.hs  Lexclafer.x  Makefile  Parclafer.hs  Parclafer.y  Printclafer.hs  README.md  clafer.cf  claferSyntaxChecker.hs  claferSyntaxer.cabal  doc
src/: Makefile  clafer.cf  claferSyntaxer.hs
src/Language/Clafer/: ClaferArgs.hs
src/Language/Clafer/Front/: Absclafer.hs  LayoutResolver.hs  Lexclafer.hs  Parclafer.hs  Parclafer.y  Printclafer.hs
test/negative/: after01.cfr  after02.cfr  afteruntil01.cfr  afteruntil02.cfr  afteruntil03.cfr  before01.cfr  before02.cfr  betweenand01.cfr  betweenand02.cfr  betweenand03.cfr  clafertransitionconstraint01.cfr  clafertransitionconstraint02.cfr  clafertransitionconstraint03.cfr  clafertransitionconstraint04.cfr  clafertransitionconstraint05.cfr  clafertransitionconstraint06.cfr  clafertransitionconstraint07.cfr  clafertransitionconstraint08.cfr  clafertransitionconstraint09.cfr  finally01.cfr  finally02.cfr  initially01.cfr  initially02.cfr  next-sytax-error01.cfr  transitionconstraint01.cfr  transitionconstraint02.cfr  transitionconstraint03.cfr  transitionconstraint04.cfr  transitionconstraint05.cfr  transitionconstraint06.cfr  transitionconstraint07.cfr  transitionconstraint08.cfr  transitionconstraint09.cfr  unary-U01.cfr  unary-U02.cfr  unary-W01.cfr  unary-W02.cfr  unary-until01.cfr  unary-until02.cfr  unary-weakuntil01.cfr  (+6 more)
test/positive/: Global03.cfr  Global04.cfr  initially01.cfr  initially02.cfr  next03.cfr  next04.cfr  next05.cfr  tlshandshakeprotocol.cfr
tests/: test.cfr  test_des.cfr
