Name:               claferSyntaxer
Version:            0.1
Synopsis:           checks clafer model syntax
Description:        Clafer is a general purpose, lightweight, structural modeling language developed at GSD Lab, University of Waterloo. Lightweight modeling aims at improving the understanding of the problem domain in the early stages of software development and determining the requirements with fewer defects. Clafer's goal is to make modeling more accessible to a wider range of users and domains. The tool provides a reference language implementation. It translates models to other formats (e.g. Alloy, XML) to allow for reasoning with existing tools.
Homepage:           http://clafer.org
Stability:          Experimental
Category:           Model
Build-type:         Simple
Cabal-version:      >= 1.18
data-files:         README.md,
                    Makefile
source-repository head
    type:           git
    location:       git://github.com/juodaspaulius/clafer-grammar.git
Executable claferSyntaxer
    build-tools:    ghc >= 7.6.3
    default-language: 
                    Haskell2010
    default-extensions:
                    DeriveDataTypeable,
                    RankNTypes
    main-is:        claferSyntaxer.hs
    build-depends:  array >= 0.4.0.1,
                    base >= 4.6.0.1 && < 5,
                    containers >= 0.5.0.0,
                    directory >= 1.2.0.1,
                    filepath >= 1.3.0.1,
                    process >= 1.1.0.2,

                    HUnit >= 1.2.5.2,
                    mtl >= 2.1.2,
                    parsec >= 3.1.3,
                    QuickCheck >= 2.6, 
                    transformers >= 0.3.0.0,

                    data-stringmap >= 1.0.1.1,
                    aeson >= 0.7.0.2,
                    json-builder >= 0.3,
                    lens >= 4.1.1,
                    string-conversions >= 0.3.0.2,
                    cmdargs >= 0.10.7, 
                    executable-path >= 0.0.3, 
                    glpk-hs >= 0.3.4,
                    MaybeT >= 0.1.2,
                    split >= 0.2.2, 
                    test-framework >= 0.8.0.3, 
                    test-framework-hunit >= 0.3.0.1, 
                    test-framework-quickcheck2 >= 0.3.0.2,
                    test-framework-th >= 0.2.4,
                    text >= 0.11.3.1

    if os(windows)
        build-depends: HaXml == 1.24
    else
        build-depends: HaXml >= 1.24

    hs-source-dirs: src
    other-modules: Paths_claferSyntaxer

Test-Suite test-suite
    build-tools:    ghc >= 7.6.3
    default-language: 
                    Haskell2010    
    type:           exitcode-stdio-1.0  
    main-is:        test-suite.hs
    hs-source-dirs: test
    build-depends:  
                    array >= 0.4.0.1,
                    base >= 4.6.0.1 && < 5,
                    containers >= 0.5.0.0,
                    directory >= 1.2.0.1,
                    filepath >= 1.3.0.1,
                    process >= 1.1.0.2,

                    HUnit >= 1.2.5.2,
                    mtl >= 2.1.2,
                    parsec >= 3.1.3,
                    QuickCheck >= 2.6, 
                    transformers >= 0.3.0.0,

                    data-stringmap >= 1.0.1.1,
                    aeson >= 0.7.0.2,
                    json-builder >= 0.3,
                    lens >= 4.1.1,
                    string-conversions >= 0.3.0.2,
                    cmdargs >= 0.10.7, 
                    executable-path >= 0.0.3, 
                    glpk-hs >= 0.3.4,
                    MaybeT >= 0.1.2,
                    split >= 0.2.2, 
                    test-framework >= 0.8.0.3, 
                    test-framework-hunit >= 0.3.0.1, 
                    test-framework-quickcheck2 >= 0.3.0.2,
                    test-framework-th >= 0.2.4,
                    text >= 0.11.3.1,

                    clafer == 0.3.7

    if os(windows)
        build-depends: HaXml == 1.24
    else
        build-depends: HaXml >= 1.24

    ghc-options:    -Wall -fno-warn-unused-do-bind -fno-warn-orphans

    other-modules:  Paths_clafer,
                    Functions,
                    Suite.Example,
                    Suite.Positive,
                    Suite.Negative,
                    Suite.SimpleScopeAnalyser

